	* Full support for Monster Magnet, Chakra, and Dash.
	* Fixed players that just entered a map seeing full Energy Charge on players
	with only a partial charge. Energy charge is not stored in Player's
	activeEffects until it reaches full charge.
	* Process summon types for summon skills in SkillDataLoader. Full support
	for summons and puppets.

2011-06-05  GoldenKevin  (revision 37)
	* You may now allocate ability (stat) points and skill points.
	* Code cleanup - removal of unused imports and variables/function calls.

2011-06-09  GoldenKevin  (revision 38)
	* Full support for minigames (i.e. omok and match cards).
	* Added new database table for recording minigame scores - update your SQL.
	* Full support for player trades.
	* Progress on all sorts of minirooms. Player shops are partially functional
	and hired merchants are still totally nonfunctional.

2011-06-14  GoldenKevin  (revision 39)
	* No more ranged map entities. Rationale:
		* Bandwidth of repeated packets used to show and hide entities as they
		went in and out of range for a player was costlier than sending each
		player the spawn packet for every entity on the map only once
		(especially the relatively huge spawn packet for mobs).
		* Saves memory server side since it no longer has to keep track of every
		mob/drop/etc. that is in range of a player.
		* Spares precious server CPU cycles that are used to check if a ranged
		entity is in range every time either a player moves or that ranged
		entity moves. No more CPU cycles wasted on costly thread safe operations
		with each player's "visibleEntities" pool.
		* Fixes ranged entities disappearing when a player jumps down. Concept
		of ranged entities became obsolete when players were able to jump down,
		allowing them to move from one point to another much faster than through
		any other kind of movement. The speed of the server and network latency
		became responsible for whether the server could update a client with its